# mypython-2022

./: Task_1.ipynb  Task_2_.ipynb  Task_3.ipynb
python_project/: README.md  pyproject.toml
python_project/project_name/: calculations.py
python_project/project_name.egg-info/: PKG-INFO  SOURCES.txt
python_project/tests/project_name/: test_calculations.py
