[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "project_name"
version = "0.0.1"

authors = [
  { name="Elizaveta", email="dolgintsevaliza00@gmail.com" },
]
description = "A small example"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
    "pandas >= 1.5.2",
]

[project.urls]
"Homepage" = "https://github.com/TiMeLeSsWorld00"
"Bug Tracker" = "https://github.com/TiMeLeSsWorld00/mypython-2022"

[tool.isort]
profile = "black"
src_paths = ["project_name", "test"]

[tool.mypy]
python_version = "3.10"
disallow_untyped_defs = false
disallow_incomplete_defs = false
follow_imports = "normal"
ignore_missing_imports = true
pretty = true
show_column_numbers = true
show_error_codes = true
warn_no_return = false
warn_unused_ignores = true

[tool.black]
skip-string-normalization = true

[tool.ruff]
line-length = 88